# SystemIntegrationFirst

./: .gitignore
00._Course_Material/00._Meta_Course_Material/: about_the_course.md  about_the_exam.md  exam_requirements.md  poetry_commands.md
01._Introduction/: getgooglehome.sh  index.html  paymentiframe.html
02_Text-based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml  paymentiframe.html
03_Modules/html_classic/: index.html  index.js  myModule.js
03_Modules/node_commonjs/: index.js  myModule.js
03_Modules/node_esmodules/: index.html  myModule.js
03_Modules/python_main/: library_importer.py  potential_library.py
03_Modules/python_modules/: main.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: encoding-decoding.py  main.py
05._Python_Virtual_Environments/: main.py
05._Python_Virtual_Environments/03._poetry/: pyproject.toml
06._Simple_Servers/01._node/: app.js  package-lock.json  package.json
06._Simple_Servers/02._python/: main.py  pyproject.toml
06._Simple_Servers/03._test/: app.js  package-lock.json  package.json
08._Server-Server/01._node/: app.js  package-lock.json  package.json  test.json
08._Server-Server/02._python/: main.py
09._Environment_Variables/01._node/: index.js  package-lock.json  package.json
09._Environment_Variables/02._python/: main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/1._node/: app.js  package-lock.json  package.json
12._Long_Polling/01._node/: app.js
13._Server-sent_events/01._node/: package.json
13._Server-sent_events/02._python/: main.py  pyproject.toml
14._WebSocket/01._node/: package.json  server.js
14._WebSocket/02._python_plain/: server.py
14._WebSocket/03._python_fastapi/: pyproject.toml
15._OpenAPI/01._node/: app.js  package-lock.json  package.json
15._OpenAPI/02._python/: pyproject.toml
15._OpenAPI/03._java/: SwaggerConfig.java
16._WebRTC/01._webrtc_browser_sdp/: index.html  package-lock.json
16._WebRTC/02._webrtc_firestore/: index.html  package-lock.json  package.json
16._WebRTC/webrtc_browser.sdp/: package.json
17._Database_Migrations/: package-lock.json  pgdump.sql
17._Database_Migrations/01._node_knex/: package.json
17._Database_Migrations/02._python_alembic/: Commands.md
18._CORS/: index.html
18._CORS/01._node/: package-lock.json  package.json
18._CORS/02._python/: main.py  pyproject.toml  requirements.txt
19._Multipart_Forms/: index.html
19._Multipart_Forms/01._node/: app.js  package-lock.json  package.json
19._Multipart_Forms/02._python/: main.py  pyproject.tml  requirements.txt
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: package-lock.json  package.json
22._MPEG-DASH/public/: index.html
23._Embedded_Youtube/: embeddedyoutube.html
25._GitHub_Webhooks/01._node/: app.js  package-lock.json  package.json
25._GitHub_Webhooks/02._python/: main.py  pyproject.toml
26._GraphQL/01._node_basic/: package-lock.json  package.json
26._GraphQL/02._node_intermediary/: app.js  package-lock.json  package.json
27._Web_Scraping_Web_Crawling/01._node/: index.html  index.js  package-lock.json  package.json
27._Web_Scraping_Web_Crawling/02._python_wiki_page_web_scraping/: pyproject.toml
27._Web_Scraping_Web_Crawling/04._python_scrapy_basic/: pyproject.toml
27._Web_Scraping_Web_Crawling/04._python_scrapy_basic/wikicrawler/: output.json
27._Web_Scraping_Web_Crawling/04._python_scrapy_basic/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
28._Simple_http/: README.md
28._Simple_http/01._node/: app.js
28._Simple_http/02._python/: main.py
Assignments/00._Mandatories/: 01._Mandatory_I.md  02._Mandatory_II.md
Assignments/06._Client_And_Server_Client-To-Client/06a._WebSocket_Example.md/14._WebSocket/02._python_plain/: client.py  pyproject.toml
Assignments/08b/: openapi.md
Assignments/08b._Code-OpenAPI_Documentation/: pdoc.md
Assignments/10a/: README.md  (+3 more)
(+134 files in other folders)
