[project]
name = "04-python-scrapy-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "anderslatif",email = "anderslatif@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "04"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
