[project]
name = "02-python-plain"
version = "0.1.0"
description = ""
authors = [
    {name = "tobiasbkraemer",email = "tobi4533@stud.keadk"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)"
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
